Fixed scrollbars inside the frame rolling view so they don't make the growth animation look crappy

--- a/app/stylesheets/partials/frame-rolling-completion.scss
+++ b/app/stylesheets/partials/frame-rolling-completion.scss
@@ -6,8 +6,9 @@
 
 .frame-rolling-completion{
 	@extend .rolling-main;
-//		background:blue;
-//		@include opacity(0.9);
+//	background:blue;
+//	@include opacity(0.9);
+	overflow-y:hidden;
 	.frame-share{
 //		background: url('../images/assets/noise.png') #494949;
 		@include border-radius(0);
