--- a/public/stylesheets/partials/frame-rolling.css
+++ b/public/stylesheets/partials/frame-rolling.css
@@ -10,7 +10,7 @@
 .rolling-main {
   border-bottom: 1px solid #222;
   bottom: 40px;
-  overflow-y: hidden;
+  overflow-y: scroll;
   overflow-x: hidden;
   position: absolute;
   top: 0;
